vlib/v/checker/tests/filter_func_return_nonbool_err.out
vlib/v/checker/tests/filter_func_return_nonbool_err.vv:5:14: notice: unused parameter: `arg`
    3 | }
    4 | 
    5 | fn stringsss(arg int) string {
      |              ~~~
    6 |     return ''
    7 | }
vlib/v/checker/tests/filter_func_return_nonbool_err.vv:2:2: warning: unused variable: `list`
    1 | fn main() {
    2 |     list := [1, 2, 3].filter(stringsss(it))
      |     ~~~~
    3 | }
    4 |
vlib/v/checker/tests/filter_func_return_nonbool_err.vv:2:27: error: type mismatch, `stringsss` must return a bool
    1 | fn main() {
    2 |     list := [1, 2, 3].filter(stringsss(it))
      |                              ~~~~~~~~~~~~~
    3 | }
    4 |
